Fix account dropdown hover gap

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -122,7 +122,7 @@
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: calc(100% + 0.25rem);
+    top: 100%;
     right: 0;
     background-color: white;
     min-width: 200px;
@@ -140,10 +140,10 @@
 .dropdown-menu::before {
     content: '';
     position: absolute;
-    top: -0.25rem;
+    top: -0.15rem;
     left: 0;
     right: 0;
-    height: 0.25rem;
+    height: 0.15rem;
     background: transparent;
 }
 
